--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Flower Shop</title>
 </head>
 
 <body>
@@ -99,11 +99,23 @@
             </div>
 
         </section>
-        <section class="insta">
- <div></div>
+        <section class="insta-sec">
+            <div class="insta-sec-text">
+                <h3>Instagram</h3>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when
+                    looking at its layout.</p>
+
+            </div>
+            <div class="insta-img-grp">
+                <img src="./flower-shop-assignment/Flower Asset/Rectangle 3.png" alt="">
+                <img src="./flower-shop-assignment/Flower Asset/Rectangle 4.png" alt="">
+                <img src="./flower-shop-assignment/Flower Asset/Rectangle 5.png" alt="">
+                <img src="./flower-shop-assignment/Flower Asset/Rectangle 6.png" alt="">
+
+            </div>
 
 
-            
+
         </section>
     </main>
 
