--- a/index.html
+++ b/index.html
@@ -29,97 +29,113 @@
     <main>
         <section class="banner">
             <div class="banner-text">
-                <h1>Let's make <br> beautiful flowers a <br> part of your life.</h1>
-                <p>It is a long established fact that a reader will be distracted by the readable content of a page when
-                    looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal
-                    distribution of letters.</p>
+                <h1>
+                    Let's make <br />
+                    beautiful flowers a <br />
+                    part of your life.
+                </h1>
+                <p>
+                    It is a long established fact that a reader will be distracted by
+                    the readable content of a page when looking at its layout. The point
+                    of using Lorem Ipsum is that it has a more-or-less normal
+                    distribution of letters.
+                </p>
                 <button class="btn-primary">Shop Now</button>
             </div>
             <div class="banner-img">
-                <img src="./flower-shop-assignment/Flower Asset/pngwing 6.png" alt="">
+                <img src="./flower-shop-assignment/Flower Asset/pngwing 6.png" alt="" />
             </div>
         </section>
         <section class="featured-flowers">
-
             <div class="featured-text">
                 <h2>Our Featured Flowers</h2>
-                <p>It is a long established fact that a reader will be distracted by the readable content of a page
-                    when looking at its layout.</p>
+                <p>
+                    It is a long established fact that a reader will be distracted by
+                    the readable content of a page when looking at its layout.
+                </p>
             </div>
             <div class="flower-card-group">
                 <div class="card">
-
                     <div class="flower-card">
-                        <img src="./flower-shop-assignment/Flower Asset/pngwing 7.png" alt="">
+                        <img src="./flower-shop-assignment/Flower Asset/pngwing 7.png" alt="" />
                     </div>
                     <p>Pink Flower Tree</p>
                 </div>
 
                 <div class="card">
-
                     <div class="flower-card">
-                        <img src="./flower-shop-assignment/Flower Asset/Rectangle 4.png " alt="">
+                        <img src="./flower-shop-assignment/Flower Asset/Rectangle 4.png " alt="" />
                     </div>
                     <p>Pink Flower Tree</p>
                 </div>
                 <div class="card">
-
                     <div class="flower-card">
-                        <img src="./flower-shop-assignment/Flower Asset/pngwing 5.png " alt="">
+                        <img src="./flower-shop-assignment/Flower Asset/pngwing 5.png " alt="" />
                     </div>
                     <p>Pink Flower Tree</p>
                 </div>
-
             </div>
-
         </section>
         <section class="business-policy">
             <div class="b-p">
-                <img src="./flower-shop-assignment/Flower Asset/Group 57.png" alt="">
+                <img src="./flower-shop-assignment/Flower Asset/Group 57.png" alt="" />
                 <h4>Same Day Delivery. Click & Collect.</h4>
             </div>
             <div class="b-p">
-                <img src="./flower-shop-assignment/Flower Asset/Group 58.png" alt="">
+                <img src="./flower-shop-assignment/Flower Asset/Group 58.png" alt="" />
                 <h4>Fresh Flowers. Local Growers.</h4>
             </div>
             <div class="b-p">
-                <img src="./flower-shop-assignment/Flower Asset/Group 59.png" alt="">
+                <img src="./flower-shop-assignment/Flower Asset/Group 59.png" alt="" />
                 <h4>24/7 Free Support.</h4>
             </div>
         </section>
         <section class="hot-deal">
             <div class="hot-deal-text">
                 <h2>Hot Deal ! Sale Up To 25% <span class="color-1">Off</span></h2>
-                <p>It is a long established fact that a reader will be distracted by the readable content of a page when
-                    looking at its layout.</p>
+                <p>
+                    It is a long established fact that a reader will be distracted by
+                    the readable content of a page when looking at its layout.
+                </p>
                 <button class="btn-primary">Sign Up</button>
             </div>
             <div class="hot-deal-img">
-                <img src="./flower-shop-assignment/Flower Asset/pngwing 8.png" alt="">
+                <img src="./flower-shop-assignment/Flower Asset/pngwing 8.png" alt="" />
             </div>
-
         </section>
         <section class="insta-sec">
             <div class="insta-sec-text">
                 <h3>Instagram</h3>
-                <p>It is a long established fact that a reader will be distracted by the readable content of a page when
-                    looking at its layout.</p>
-
+                <p>
+                    It is a long established fact that a reader will be distracted by
+                    the readable content of a page when looking at its layout.
+                </p>
             </div>
             <div class="insta-img-grp">
-                <img src="./flower-shop-assignment/Flower Asset/Rectangle 3.png" alt="">
-                <img src="./flower-shop-assignment/Flower Asset/Rectangle 4.png" alt="">
-                <img src="./flower-shop-assignment/Flower Asset/Rectangle 5.png" alt="">
-                <img src="./flower-shop-assignment/Flower Asset/Rectangle 6.png" alt="">
-
+                <img src="./flower-shop-assignment/Flower Asset/Rectangle 3.png" alt="" />
+                <img src="./flower-shop-assignment/Flower Asset/Rectangle 4.png" alt="" />
+                <img src="./flower-shop-assignment/Flower Asset/Rectangle 5.png" alt="" />
+                <img src="./flower-shop-assignment/Flower Asset/Rectangle 6.png" alt="" />
             </div>
-
-
-
+        </section>
+        <section class="latest-deal-sec">
+            <h2>Get The Latest Deals</h2>
+            <p>$30 coupon for first shopping</p>
+            <div>
+                <input type="email" name="" id="" placeholder="Enter your E-mail...">
+                <button class="btn-primary">Subscribe</button>
+            </div>
         </section>
     </main>
 
-    <footer></footer>
+    <footer>
+        <h1 class="logo">
+            <span class="color-1">Flower</span><span class="color-2">Shop</span>
+        </h1>
+        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking
+            at its layout.</p>
+        <p class="copy-right">@2020-2023, FlowerShop.com. All rights reserved.</p>
+    </footer>
 </body>
 
 </html>
